projects/core/istio/local-lan-vernal-dev.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: vernal
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http-local-lan-vernal-dev
    hostname: local.lan.vernal.dev
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: http-wildcard-local-lan-vernal-dev
    hostname: "*.local.lan.vernal.dev"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-local-lan-vernal-dev
    hostname: local.lan.vernal.dev
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: local.lan.vernal.dev-tls
  - name: https-wildcard-local-lan-vernal-dev
    hostname: "*.local.lan.vernal.dev"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: local.lan.vernal.dev-tls
